--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
             <p class="copyright">
                 Copyright <a href="https://newsapi.org">NewsAPI</a>
             </p>
+            <a href="https://github.com/TimBabaryka" class="iconSize"> Tsimafei Babaryka</a>
+
         </footer>
 
         <template id="sourceItemTemp">
